--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -39,7 +39,7 @@
 }
 
 section {
-	background: #F5EDE7;
+	background: #000000;
 }
 
 .pad {
@@ -137,7 +137,7 @@ header {
 .info-2 {
 
 	padding: 100px 0 100px 0;
-	background:#fff;
+	background:#000000de;
 
 	&:first-child {
 		padding-top: 100px;
