--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -54,7 +54,7 @@ h2 {
 	// font-family: 'Share Tech Mono', monospace;
 	font-family: 'Heebo', sans-serif;
 	// font-family: 'Roboto', sans-serif;
-	// color: #7F5B53
+	color: #ffffff
 }
 
 h3 {
@@ -62,7 +62,7 @@ h3 {
 }
 
 h2 a {
-	color: #000;
+	color: #ffffff;
 
 	&:hover {
 		text-decoration: none;
@@ -75,4 +75,9 @@ p, address, ul {
 	font-weight: 400;
 	line-height: 1.6em;
 	font-family: 'Lato', sans-serif;
+	color: white
+}
+
+.img1{
+	opacity: 0.5;
 }
